custom-images/kubernetes/application/xp1/overlays/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sitecore-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
      - docker-examples.tk
      - cm.docker-examples.tk
      - id.docker-examples.tk
      - hrz.docker-examples.tk
      secretName: tls-secret
  rules:
  - host: docker-examples.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cd
            port: 
              number: 80
  - host: cm.docker-examples.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cm
            port: 
              number: 80
  - host: id.docker-examples.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: id
            port: 
              number: 80
  - host: hrz.docker-examples.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hrz
            port: 
              number: 80
